--- a/sim/integration_validation.ipynb
+++ b/sim/integration_validation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Full OBIM Integration Validation"
+    "# Integration Validation"
    ]
   },
   {
